src/objects/tax__c.object
<CustomObject>
    <fields>
        <fullName>tax_level__c</fullName>
        <label>tax-level</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tax_location__c</fullName>
        <label>tax-location</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tax_percent__c</fullName>
        <label>tax-percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>tax</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>tax Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>taxes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>